[package]
name = "vscode-moon-phase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
moon-calc = "1.0.0"
wasm-bindgen = { version = "0.2.87", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
